examples/kyverno/022_specific_toleration_pod.yaml
oc apply -f - <<EOF
apiVersion: v1
kind: Pod
metadata:
  generateName: tolerated-pod-   # trailing hyphen is intentional
spec:
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/master
    operator: Exists
  containers:
  - image: docker.io/redhat/ubi8:latest
    name: demo
    command: ["/bin/sh", "-c", "while :; do date; sleep 10; done"]
