examples/kyverno/031_node_selector_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-selector-pod
spec:
  nodeSelector:
    node-role.kubernetes.io/any-other-node: ""
  containers:
  - image: docker.io/redhat/ubi8:latest
    name: demo
    command: ["/bin/sh", "-c", "while :; do date; sleep 10; done"]
