examples/kyverno/032_node_name_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-name-pod
spec:
  nodeName: any-other-node
  containers:
  - image: docker.io/redhat/ubi8:latest
    name: demo
    command: ["/bin/sh", "-c", "while :; do date; sleep 10; done"]
