examples/kyverno/010_add_node_selector.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-node-selector
  annotations:
    policies.kyverno.io/title: Add nodeSelector
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
            Adds the nodeSelector field to a Pod spec.
spec:
  background: false
  rules:
  - name: add-node-selector
    match:
      resources:
        kinds:
        - Pod
    # Adds the `nodeSelector` field to any Pod with two labels.
    mutate:
      patchStrategicMerge:
        spec:
          nodeSelector:
            node-role.kubernetes.io/worker: ""
