examples/kyverno/030_restrict_node_selection.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-node-selection
  annotations:
    policies.kyverno.io/title: Restrict node selection
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy prevents users from targeting specific nodes
      for scheduling of Pods by prohibiting the use of the `nodeSelector`
      and `nodeName` fields in a Pod spec.
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: restrict-node-selector
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: Setting the nodeSelector field is prohibited.
      pattern:
        spec:
          X(nodeSelector): "null"
  - name: restrict-node-name
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: Setting the nodeName field is prohibited.
      pattern:
        spec:
          X(nodeName): "null"
